...
                    ),
                  ),
                  Container(
                    padding: const EdgeInsets.only(left: 10),
                    margin: const EdgeInsets.only(right: 20),
                    child: TextFormField(
                       key: Key('tglpinjam'),
                      controller: datememinjam,
                      decoration: const InputDecoration(
                          hintText: "Pilih Tanggal Meminjam",
                          prefixIcon: Icon(Icons.date_range_outlined),
                          border: UnderlineInputBorder()),
                      readOnly: true,
...
                    ),
                  ),
                  Container(
                    padding: const EdgeInsets.only(left: 10),
                    margin: const EdgeInsets.only(right: 20),
                    child: TextFormField(
                       key: Key('tglkembali'),
                      controller: datepengembalian,
                      decoration: const InputDecoration(
                          hintText: "Pilih Tanggal Pemngembalian",
                          prefixIcon: Icon(Icons.date_range_outlined),
                          border: UnderlineInputBorder()),
                      readOnly: true,
...
