...
                                            MaterialPageRoute(
                                                builder: (context) {
                                          return HomePage();
                                        }));
                                        //Navigate to the next screen or perform any desired action
                                      },
                                      child: const Text('OK'),
                                    ),
                                  ],
                                );
                              },
                            );
                          } else {
...
